--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,4 +3,31 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <security-role>
+        <description></description>
+        <role-name>guest</role-name>
+    </security-role>
+    <security-constraint>
+        <display-name>NThing Security</display-name>
+        <web-resource-collection>
+            <web-resource-name>NThing</web-resource-name>
+            <description></description>
+            <url-pattern>/WebContent/addBook.jsp</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description>권한 관리자명</description>
+            <role-name>guest</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <login-config>
+        <auth-method>FORM</auth-method>
+        <form-login-config>
+            <form-login-page>/WebContent/login.jsp</form-login-page>
+            <form-error-page>/WebContent/login_failed.jsp</form-error-page>
+        </form-login-config>
+    </login-config>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WebContent/exceptionNoPage.jsp</location>
+    </error-page>
 </web-app>
