--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,20 +5,8 @@
          version="4.0">
     <security-role>
         <description></description>
-        <role-name>guest</role-name>
+        <role-name>admin</role-name>
     </security-role>
-    <security-constraint>
-        <display-name>NThing Security</display-name>
-        <web-resource-collection>
-            <web-resource-name>NThing</web-resource-name>
-            <description></description>
-            <url-pattern>/WebContent/addBook.jsp</url-pattern>
-        </web-resource-collection>
-        <auth-constraint>
-            <description>권한 관리자명</description>
-            <role-name>guest</role-name>
-        </auth-constraint>
-    </security-constraint>
     <login-config>
         <auth-method>FORM</auth-method>
         <form-login-config>
